# redisdal

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build-deb.sh  code-format.py  code-lint.sh  meson.build  meson.options
.github/workflows/: cmake.yml
cmake/: FindRedisdal.cmake
debian/: changelog  control  copyright  libredisdal-dev.install  libredisdal.install  not-installed  rules
docs/: DESIGN.md
include/janus/: common.hpp  exception.hpp  kv_connection.hpp  kv_template.hpp  operations.hpp  redis_connection.hpp  redis_operations.hpp  redis_template.hpp  serialization.hpp
include/redisdal/: common.hpp  exception.hpp  kv_connection.hpp  kv_template.hpp  operations.hpp  redis_connection.hpp  redis_operations.hpp  redis_template.hpp  redisdal.hpp  serialization.hpp
pkgconfig/: redisdal.pc.in
src/: redis_connection.cpp
test/: CMakeLists.txt  execute_cmd_lua_test.cpp  hash_ops_test.cpp  hash_test.cpp  janus_example.cpp  key_ops_test.cpp  list_ops_test.cpp  list_test.cpp  lua_and_raw_cmd_test.cpp  meson.build  redis_connection_test.cpp  redis_operations_test.cpp  redis_tpl_test.cpp  serializer_test.cpp  set_ops_test.cpp  set_test.cpp  string_ops_test.cpp  string_test.cpp  test_env.cpp  test_env.hpp  zset_ops_test.cpp  zset_test.cpp
